err/djangocms-terminal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/autofixture'...
Listing './lib/python3.5/site-packages/autofixture/management'...
Listing './lib/python3.5/site-packages/autofixture/management/commands'...
Listing './lib/python3.5/site-packages/django_autofixture-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/djangocms_terminal'...
Listing './lib/python3.5/site-packages/djangocms_terminal/migrations'...
Listing './lib/python3.5/site-packages/djangocms_terminal/static'...
Listing './lib/python3.5/site-packages/djangocms_terminal/static/css'...
Listing './lib/python3.5/site-packages/djangocms_terminal/static/js'...
Listing './lib/python3.5/site-packages/djangocms_terminal/templates'...
Listing './lib/python3.5/site-packages/djangocms_terminal/templates/djangocms_terminal'...
Listing './lib/python3.5/site-packages/djangocms_terminal/templates/djangocms_terminal/plugins'...
Compiling './lib/python3.5/site-packages/djangocms_terminal/utils.py'...
***   File "./lib/python3.5/site-packages/djangocms_terminal/utils.py", line 81
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangocms_terminal/views.py'...
***   File "./lib/python3.5/site-packages/djangocms_terminal/views.py", line 25
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangocms_terminal-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
